syntax = "proto3";

package spine.test.tools.validate;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.tools.validate";
option java_outer_classname = "DistinctProto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message ProtoSet {

    repeated google.protobuf.Any element = 1 [(distinct) = true];
}
